# helloworld-binding

./: .gitignore  .gitlab-ci.yml  .gitreview  CHANGELOG  CMakeLists.txt  LICENSE  MAINTAINERS  README.md  helloworld.spec
.github/workflows/: redpesk-github-ci.yml
autobuild/linux/: autobuild
conf.d/cmake/: config.cmake
conf.d/packaging/: agl-helloworld-service.dsc  agl-helloworld-service.spec  agl-service-helloworld.spec  debian.changelog  debian.control  debian.helloworld-binding-bin.install  debian.helloworld-binding-redtest.install  debian.helloworld-binding-test.install  debian.rules  helloworld-binding.dsc  helloworld-binding.spec
conf.d/wgt/: config.xml.in  manifest.yml.in  test-manifest.yml.in
docs/: 1-Architecture.md  2-Installation.md  3-Usage.md  api-services-book.yml  native_build.md  qemu-aarch64.md  whats-changed-from-1.1.0-to-2.0.0.md
helloworld-skeleton/: CMakeLists.txt  helloworld-service-binding.c
helloworld-subscribe-event/: CMakeLists.txt  helloworld-event-service-binding.c
htdocs/: CMakeLists.txt  index.html
redtest/: CMakeLists.txt  run-redtest  run-redtest.in
rpconfig/: manifest.yml
src/: helloworld.c  helloworld.cpp  info_verb.json
test/: CMakeLists.txt
test/afb-test/: CMakeLists.txt
test/afb-test/etc/: CMakeLists.txt  aft-agl-helloworld.json
test/afb-test/fixtures/: CMakeLists.txt  mapi_helloworld.lua
test/afb-test/tests/: CMakeLists.txt  helloworld.lua  mapi_tests.lua
tests/: .env  build_fact.sh  redtest_fact.sh  run.sh  tests.py
tests/ci/: lint.sh  test_and_coverage.sh
